css/unifaction-base.css
/* ... */
@media screen and (max-width:380px) {
	#viewing-user { display:none; }
}

/****************************
****** Core Navigation ******
****************************/

@media screen and (min-width:1521px) {
	#core-list { display:inline-block; width:155px; padding:0px; margin:0px; list-style-type:none; }
	.core-txt { display:inline-block; position:absolute; left:60px; font-size:12px; }
}
@media screen and (max-width:1521px) {
	#core-list { display:inline-block; width:55px; padding:0px; margin:0px; list-style-type:none; }
	.core-txt { display:none; font-size:12px; }
}

#core-nav { position:fixed; top:60px; left:0px; height:100%; z-index:100; }
#core-nav:hover { width:155px; }
#core-nav:hover>#core-list { width:155px; }
#core-nav:hover>#core-list>.corelink { width:155px; }
#core-nav:hover>#core-list a { width:100%; }
#core-nav:hover>#core-list .core-txt { display:inline-block; }

.core-link { height:40px; width:100%; border-bottom:solid 1px #2C7099; vertical-align:middle; line-height:40px; position:relative; }
.core-icon { font-size:22px; vertical-align:middle; display:inline-block; width:55px; text-align:center; line-height:40px; }

.core-link>a { display:block; transition:0.1s ease-in-out; }
.core-link>a:hover { width:100%; }

/***********************
****** Search Bar ******
***********************/

/* Search Navigation */
@media screen and (min-width:1001px) {
	#search-search { display:table-cell; width:600px; }
}
@media screen and (min-width:851px) and (max-width:1000px) {
	#search-search { display:table-cell; width:450px; }
}
@media screen and (min-width:551px) and (max-width:850px) {
	#search-search { display:table-cell; width:220px; }
}
@media screen and (max-width:550px) {
	/* #search-search { display:inline-block; width:150px; } */
	#search-search { display:none; }
}

#search-search { position:relative; vertical-align:top; padding-top:13px; }

.searchWrap { z-index:20; position:relative; height:30px; }
.searchWrapInput { position:absolute; width:97%; }
.searchHover { position:absolute; left:5px; top:37px; z-index:20; }
.searchHover>ul { list-style-type:none; padding:0px; margin:0px; }
.searchHover>ul>li { width:320px; }

.searchInput { width:100%; padding:5px; font-size:18px; box-sizing: border-box; border-radius:4px; }

.searchSel { display:block; font-size:18px; line-height:28px; text-decoration:none; padding:2px; }

.searchSelActive { display:block; font-size:18px; line-height:28px; text-decoration:none; padding:2px; }


/*****************************************************
****** Menu - horizontal menu just below header ******
*****************************************************/

.menu-wrap { padding:0px; margin:0; }
.menu { list-style-type:none; padding:0px; margin:0px; }
.menu-slot { display:inline-block; padding:0px; margin:0px; position:relative; line-height:37px; font-weight:bold; font-size:14px; transition:0.15s ease-in-out; }

.menu-slot>a { display:block; padding:0px 20px 0px 20px; position:relative; }
.menu-slot:hover>a { transition:0.1s ease-in-out; }

.menu-slot>ul { display:none; list-style-type; none; position:absolute; top:36px; left:-1px; z-index:500; }
.menu-slot:hover>ul { display:block; }

.dropdown-slot { display:inline-block; padding:0px; margin:0px; position:relative; line-height:37px; font-weight:bold; font-size:14px; transition:0.15s ease-in-out; width:100%;  }
.dropdown-slot>a { display:block; padding:0px 20px 0px 20px; position:relative; white-space:nowrap; }
.dropdown-slot:hover>a { transition:0.1s ease-in-out; }

/***********************
****** Left Panel ******
***********************/

/* Core Panel */
#panel-core { position:fixed; left:0px; top:60px; }

#core-uni { height:37px; background-color:#79bbff; border-bottom:solid 1px #2c7099; }

/****** Base CSS for Left Panel ******/

.panel-box { display:block; width:100%; min-height:20px; font-size:14px; margin-bottom:7px; }
.panel-head { display:block; position:relative; max-width:100%; font-weight:bold; padding:14px 0 14px 14px; }

.panel-slots { margin:0px; padding:0px; } /* For Main Navigation */

.panel-notes { margin:0px; padding:0px; line-height:1; margin-bottom:10px; } /* For Text Links */

/* Handling Panel Structure */
.panel-box li { list-style-type:none; }
.panel-box li>a { display:block; }

/****** Slots Styling ******/
.nav-slot { position:relative; line-height:37px; font-weight:bold; font-size:14px; transition:0.15s ease-in-out; }

.nav-slot>a { display:block; padding-left:20px; }
.nav-slot:hover>a { transition:0.1s ease-in-out; }

.nav-arrow { position:absolute; top:7px; right:12px; font-size:22px; }

.nav-back>a { padding-left:42px; }
.nav-back .nav-arrow { left:12px; }

/****** Notes Styling ******/
.nav-note a { display:block; padding:6px 16px 6px 16px; }


/************************
****** Right Panel ******
************************/

#panel-right { width:245px; }

/****************************
****** Widget Displays ******
****************************/

.widget-wrap { width:100%; margin-bottom:8px; }
.widget-inner { padding:6px; }
.widget-title { font-weight:bold; font-size:1.1em; padding-bottom:2px; }

.widget-featured { margin-top:6px; overflow:hidden; }
.widget-featured-left { float:left; overflow:hidden; width:80px; }
.widget-featured-left img { width:72px; }
.widget-featured-right { margin-left: 78px; padding-top:0px; font-size:0.9em; }

.widget-line a { display:block; padding:4px 8px 4px 8px; overflow:hidden; }


/******************************
****** UniFaction Footer ******
******************************/

/* Footer Bar */
#footer { position:fixed; bottom:0px; left:0px; width:100%; height:35px; z-index:1000; overflow:hidden; text-align:center; }
#footer-middle { line-height:35px; }

/* Footer Display Panel - the section that footer displays get shown */
#footer-panel { position:fixed; bottom:36px; right:0px; width:100%; z-index:1000; max-height:350px; }
/* ... */

